--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
+* {
+    transition: all ease-in-out 200ms;
+}
+
+/*
+#FFBEBD Rosa
+
+
+*/
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
